<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    tools:context=".MainActivity"
    android:background="@drawable/day_background">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lottie"
        android:layout_centerInParent="true"
        android:text="@string/fetching_data"
        android:visibility="visible"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/holdingLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/gautam_budh_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/last_update_12_30_pm"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/date_time_tv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_time_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@id/icon_iv"
            android:text="@string/clear_clear_sky"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_below="@id/icon_iv"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:text="@string/_22"
            android:textColor="@color/white"
            android:textSize="100sp"
            tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_tv"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
       android:layout_marginStart="35dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/temp_tv">

        <TextView
            android:id="@+id/max_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23_45_c"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/min_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23.45°C"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_tv"
        android:rowCount="3"
        android:alpha="0.8"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/humidity"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/windspeed"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_6m_s"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/windspressure"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1016mb"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="5"
                    android:src="@drawable/feelslike" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feels like"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23.54°"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/vsibility"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visibility"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10.0Km"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="5"
                    android:src="@drawable/aqi1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Air Quality Index"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/aqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </RelativeLayout>